--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sarahhart1997/budgeting-bear-a19#readme", 
   "dependencies": {
+    "compression": "1.7.4",
     "express": "4.18.1",
     "mongoose": "6.3.4",
     "morgan": "1.10.0"
