--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "bugs": {
     "url": "https://github.com/sarahhart1997/budgeting-bear-a19/issues"
   },
-  "homepage": "https://github.com/sarahhart1997/budgeting-bear-a19#readme", 
+  "homepage": "https://github.com/sarahhart1997/budgeting-bear-a19#readme",
   "dependencies": {
     "compression": "1.7.4",
     "express": "4.18.1",
-    "mongoose": "6.3.4",
+    "mongoose": "^6.3.4",
     "morgan": "1.10.0"
   }
 }
